// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider   = "prisma-client-js"
  engineType = "binary"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  ADMIN
  EDITOR
  AUTHOR
}

enum PostStatus {
  DRAFT
  PUBLISHED
}

enum TransitionDirection {
  LEFT
  RIGHT
  UP
  DOWN
}

model User {
  id           String   @id @default(cuid())
  firstName    String
  lastName     String
  email        String   @unique
  username     String?  @unique
  passwordHash String
  role         Role     @default(ADMIN)
  isActive     Boolean  @default(true)
  tokenVersion Int      @default(0)
  bio          String?
  avatarUrl    String?
  avatarFocusX Int      @default(50)
  avatarFocusY Int      @default(50)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  posts Post[]
}

model Post {
  id              String     @id @default(cuid())
  title           String
  slug            String     @unique
  excerpt         String?
  content         String
  coverImageUrl   String?
  status          PostStatus @default(DRAFT)
  publishedAt     DateTime?
  featured        Boolean    @default(false)
  readingTime     Int?
  metaTitle       String?
  metaDescription String?
  ogImageUrl      String?
  canonicalUrl    String?
  createdAt       DateTime   @default(now())
  updatedAt       DateTime   @updatedAt

  author   User   @relation(fields: [authorId], references: [id])
  authorId String

  categories PostCategory[]
  tags       PostTag[]
  views      PostView[]
  heroSlides HeroSlide[]

  @@index([status, publishedAt])
  @@index([featured, publishedAt])
  @@index([authorId])
}

model HeroSlide {
  id              String   @id @default(cuid())
  imageUrl        String
  titleColorLeft  String?
  titleColorRight String?
  sortOrder       Int      @default(0)
  isActive        Boolean  @default(true)
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  post   Post?   @relation(fields: [postId], references: [id], onDelete: SetNull)
  postId String?

  @@index([isActive, sortOrder])
  @@index([postId])
}

model HeroConfig {
  id                  String              @id @default("default")
  autoplaySeconds     Int                 @default(10)
  transitionDirection TransitionDirection @default(LEFT)
  createdAt           DateTime            @default(now())
  updatedAt           DateTime            @updatedAt
}

model Category {
  id          String   @id @default(cuid())
  name        String   @unique
  slug        String   @unique
  description String?
  parentId    String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  parent   Category?      @relation("CategoryHierarchy", fields: [parentId], references: [id])
  children Category[]     @relation("CategoryHierarchy")
  posts    PostCategory[]
}

model Tag {
  id        String   @id @default(cuid())
  name      String   @unique
  slug      String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  posts PostTag[]
}

model PostCategory {
  postId     String
  categoryId String

  post     Post     @relation(fields: [postId], references: [id])
  category Category @relation(fields: [categoryId], references: [id])

  @@id([postId, categoryId])
}

model PostTag {
  postId String
  tagId  String

  post Post @relation(fields: [postId], references: [id])
  tag  Tag  @relation(fields: [tagId], references: [id])

  @@id([postId, tagId])
}

model PostView {
  id       String   @id @default(cuid())
  postId   String
  viewedAt DateTime @default(now())

  post Post @relation(fields: [postId], references: [id])

  @@index([postId])
}

model SiteSettings {
  id              String   @id @default("default")
  siteName        String?
  siteDescription String?
  siteUrl         String?
  adminEmail      String?
  adminFirstName  String?
  adminLastName   String?
  timezone        String?
  dateFormat      String?
  timeFormat      String?
  weekStartsOn    String?
  language        String?
  aboutContentTr  String?
  aboutContentEn  String?
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

model AuditLog {
  id         String   @id @default(cuid())
  channel    String   @default("security")
  event      String
  severity   String   @default("info")
  requestId  String?
  actorUserId String?
  path       String?
  ipAddress  String?
  context    Json?
  createdAt  DateTime @default(now())

  @@index([channel, createdAt])
  @@index([event, createdAt])
  @@index([actorUserId, createdAt])
}
